--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,14 @@
             android:enabled="true"
             android:exported="true" />
         <receiver
-            android:name=".ServiceBroadcastReciever"
+            android:name=".WifiConnectionBroadcastReciever"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true" >
+            <intent-filter android:priority="100">
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.net.wifi.STATE_CHANGE"/>
+            </intent-filter>
+        </receiver>
 
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoTitle">
