--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -29,3 +30,5 @@ dependencies {
     implementation  "org.java-websocket:Java-WebSocket:1.4.0"
 
 }
+
+apply plugin: 'com.google.gms.google-services'
